# some_code_for_DSO

./: .cproject  .project  CMakeLists.txt  GameConsole-NewEdition-Champ Debug.launch  GameConsole-NewEdition-Champ.ioc  GameConsole-NewEdition-Champ.launch  STM32F103C8TX_FLASH.ld  mx.scratch
App/: AppVersion.cpp.in  AppVersion.h  FAStack.hpp  InputFA.hpp  Startup.cpp  Startup.h
App/Modules/: Coordinate.hpp  Style.hpp
App/Modules/Adafruit_GFX/: Adafruit_GFX.cpp  Adafruit_GFX.hpp  Draw_Write.cpp  Draw_Write.hpp  ILI9341.cpp  ILI9341.hpp
App/Modules/Process/: AboutPicture.hpp  MainThread.cpp  MainThread.hpp  PreviewPicture.hpp
App/Modules/Snake/: SnakeLogic.cpp  SnakeLogic.hpp  SnakeTask.cpp  SnakeTask.hpp
App/Modules/Sound/: Definitions.hpp  Melody.cpp  Melody.hpp  SoundManager.cpp  SoundManager.hpp
App/Modules/Tetris/: TetrisLogic.cpp  TetrisLogic.hpp  TetrisTask.cpp  TetrisTask.hpp
Common/: NonCopyable.hpp
Core/Inc/: buzzer.h  controls.h  main.h  printf_config.h  stm32f1xx_api.h  stm32f1xx_conf.h  stm32f1xx_it.h  tiny_printf.h
Core/Src/: buzzer.c  controls.c  main.c  stm32f1xx_api.c  stm32f1xx_conf.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  syscalls.c
Debug/: .ninja_deps  .ninja_log  AppVersion.cpp  CMakeCache.txt  GameConsole-NewEdition-Champ.elf  build.ninja  cmake_install.cmake  compile_commands.json  test.map
